--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   cloud_firestore: ^5.0.0
   file_picker: ^6.2.1
   firebase_core: ^3.0.0
+  firebase_storage: ^12.0.1
+  firebase_storage_web: ^3.9.9
   flutter:
     sdk: flutter
   flutter_quill: ^9.3.11
@@ -17,6 +19,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.18.1
   quill_html_editor: ^2.2.8
+  
 
 dev_dependencies:
   flutter_test:
