--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,15 +8,17 @@ environment:
 
 dependencies:
   cloud_firestore: ^5.0.0
-  file_picker: ^6.2.1
+  flutter_spinkit: ^5.2.1
   firebase_core: ^3.0.0
+  get: ^4.6.6
+  fluttertoast: ^8.2.6
+  image_picker: ^1.1.2
   firebase_storage: ^12.0.1
   firebase_storage_web: ^3.9.9
   flutter:
     sdk: flutter
   flutter_quill: ^9.3.11
   go_router: ^14.1.4
-  image_picker: ^1.1.2
   intl: ^0.18.1
   quill_html_editor: ^2.2.8
   
