--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   go_router: ^14.1.4
   intl: ^0.18.1
   quill_html_editor: ^2.2.8
+  firebase_auth: ^5.1.1
   
 
 dev_dependencies:
