--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   intl: ^0.18.1
   quill_html_editor: ^2.2.8
   firebase_auth: ^5.1.1
+  url_launcher: ^6.3.0
   
 
 dev_dependencies:
