--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,14 @@ dependencies:
     sdk: flutter
   flutter_quill: ^9.3.11
   go_router: ^14.1.4
-  intl: ^0.18.1
   quill_html_editor: ^2.2.8
   firebase_auth: ^5.1.1
   url_launcher: ^6.3.0
+  diacritic: ^0.1.5
   
-
+dependency_overrides:
+  intl: ^0.18.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
